# Omni-Kernel

./: .gitignore  Cargo.toml  LICENSE  README.md  build.bat  build_atlas_final.py  build_omni_atlas.py  build_omni_logic.py  build_release.bat  install  install.ps1  install.sh
dashboard/: app.js  index.html  knowledge.js  style.css
docs/: architecture.md  installation-guide.md
guests/calc-module/: Cargo.toml
guests/calc-module/src/: lib.rs
guests/orchestrator-js/: main.js
omni_atlas/: GRAND_SUMMARY.md  MASTER_LEDGER.md  MASTER_LEDGER_v2.md  vol10_harvested_mega.md  vol11_harvested_json.json  vol12_ai_brain.json  vol13_master_reference.md  vol1_master_languages.md  vol2_extended_index.md  vol3_neural_schema.json  vol4_wave2_catalog.md  vol5_teaching_patterns.md  vol6_wave3_catalog.md  vol7_deep_teaching.md  vol8_keyword_universe.md  vol9_final_catalog.md
omni_logic/: world_brain.json
src/: ai_engine.rs  bridge.rs  config.rs  errors.rs  ipc.rs  main.rs  memory_pool.rs  metrics.rs  module_registry.rs  plugin_system.rs  profiler.rs  runtime.rs  scheduler.rs  security.rs  snapshot.rs  type_system.rs  wasm_loader.rs  web_server.rs
src/ai/: grammar_db.rs  mod.rs
wit/: omni-bridge.wit
